montando a página de contatos

--- a/produtos.html
+++ b/produtos.html
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <main>
+    <section>
         <ul class="produtos">
             <li>
                 <h2> Cabelo </h2>
@@ -43,7 +43,7 @@
                 <p class="prod-preco"> 35,00 R$ </p>
             </li>
         </ul>
-    </main>
+    </section>
 
     <footer>
         <img src="assets/images/logo-branco.png">
