configurando os inputs da pág de contato

--- a/contato.html
+++ b/contato.html
@@ -61,6 +61,7 @@
     <footer>
         <img src="assets/images/logo-branco.png">
         <p class="copyright"> Copyright Barbearia Alura &copy - 2023 </p>
+        <p class="copyright"> Desenvolvido por Ellen Teixeira. </p>
     </footer>
 </body>
 </html>
