--- a/home.html
+++ b/home.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/styles.css">
     <title> Barbearia Alura </title>
 </head>
-<header>
-    <h1 class="titulo-principal"> Barbearia Alura </h1>
-</header>
-<img id="banner" src="assets/images/banner.jpg">
 <body>
+    <header>
+        <div class="container">
+            <h1><img src="assets/images/logo.png"></h1>
+            <nav>
+                <ul>
+                    <li><a href=home.html> Home </a></li>
+                    <li><a href="produtos.html"> Produtos </a></li>
+                    <li><a href="contato.html"> Contato </a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <img id="banner" src="assets/images/banner.jpg">
     <div class="principal">
         <h2 class="titulo-central"> Sobre a Barbearia Alura </h2>
 
@@ -24,12 +34,17 @@
     <div class="beneficios">
         <h2 class="titulo-central"> Benefícios </h2>
         <ul>
-            <li class="itens"> Atendimento aos Clietes</li>
+            <li class="itens"> Atendimento aos Clientes </li>
             <li class="itens"> Espaço diferenciado </li>
             <li class="itens"> Localização </li>
             <li class="itens"> Profissionais qualificados </li>
         </ul>
         <img class="img-beneficios" src="assets/images/beneficios.jpg">
     </div>
+    <footer>
+        <img src="assets/images/logo-branco.png">
+        <p class="copyright"> Copyright Barbearia Alura &copy - 2023 </p>
+        <p class="copyright"> Desenvolvido por Ellen Teixeira. </p>
+    </footer>
 </body>
 </html>
