--- a/produtos.html
+++ b/produtos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/produtos.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <title> Produtos </title>
 </head>
 <body>
@@ -48,6 +48,7 @@
     <footer>
         <img src="assets/images/logo-branco.png">
         <p class="copyright"> Copyright Barbearia Alura &copy - 2023 </p>
+        <p class="copyright"> Desenvolvido por Ellen Teixeira. </p>
     </footer>
 </body>
 </html>
