estilizando a página home

--- a/home.html
+++ b/home.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <title> Barbearia Alura </title>
 </head>
 <body>
@@ -21,26 +22,45 @@
             </nav>
         </div>
     </header>
-    <img id="banner" src="assets/images/banner.jpg">
-    <div class="principal">
-        <h2 class="titulo-central"> Sobre a Barbearia Alura </h2>
+    <img class="banner" src="assets/images/banner.jpg">
+    <main>
+        <section class="principal">
+            <h2 class="titulo-principal"> Sobre a Barbearia Alura </h2>
 
-        <p> Localizada no coração da cidade a <strong> Barbearia Alura </strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia. </p>
+            <img src="assets/images/utensilios.jpg" class="utensilios" alt="Utensilios de barbeiro">
 
-        <p id="missao-texto"><em> Nossa missão é: <strong> "Proporcionar auto-estima e qualidade de vida aos clientes". </em></strong></p>
+            <p> Localizada no coração da cidade a <strong> Barbearia Alura </strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia. </p>
 
-        <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes. </p>
-    </div>
-    <div class="beneficios">
-        <h2 class="titulo-central"> Benefícios </h2>
-        <ul>
-            <li class="itens"> Atendimento aos Clientes </li>
-            <li class="itens"> Espaço diferenciado </li>
-            <li class="itens"> Localização </li>
-            <li class="itens"> Profissionais qualificados </li>
-        </ul>
-        <img class="img-beneficios" src="assets/images/beneficios.jpg">
-    </div>
+            <p id="missao-texto"><em> Nossa missão é: <strong> "Proporcionar auto-estima e qualidade de vida aos clientes". </em></strong></p>
+
+            <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes. </p>
+        </section>
+
+        <section class="mapa">
+            <h3 class="titulo-principal"> Nosso estabelecimento </h3>
+            <p> Nosso estabelecimento está localizado no coração da cidade. </p>
+            <div class="conteudo-mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14625.799397874613!2d-46.64261019412156!3d-23.588194461911897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sAlura%20-%20Escola%20Online%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1685415280826!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+
+        <section class="beneficios">
+            <h2 class="titulo-principal"> Benefícios </h2>
+            <div class="conteudo-beneficios">
+                <ul class="lista-beneficios">
+                    <li class="itens"> Atendimento aos Clientes </li>
+                    <li class="itens"> Espaço diferenciado </li>
+                    <li class="itens"> Localização </li>
+                    <li class="itens"> Profissionais qualificados </li>
+                    <li class="itens"> Pontualidade </li>
+                    <li class="itens"> Limpeza </li>
+                </ul><img class="img-beneficios" src="assets/images/beneficios.jpg">
+            </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+    </main>
     <footer>
         <img src="assets/images/logo-branco.png">
         <p class="copyright"> Copyright Barbearia Alura &copy - 2023 </p>
